Fix source code readability in dark mode

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -53,6 +53,12 @@ code {
     font-family: 'Roboto Mono', sans-serif;
 }
 
+[data-bs-theme="dark"] {
+    code {
+        filter: brightness(200%) hue-rotate(45deg);
+    }
+}
+
 header {
     top: 56px !important;
 }
